﻿drkns 28.04.2016 16:47:33 +0200 - build 4644

1. Продолжение экспериментальных изменений в запускателе:
   - System.Executor.NotQuotedShell и System.Executor.ComSpecParams больше нет. Однако, теперь есть System.Executor.ComspecArguments, управляющий одновременно и ключами, и кавычками.
     По умолчанию значение совместимо с cmd.exe - /S /C "{0}", где {0} будет заменено исполняемой командой.
     Для bash замените на -c '{0}', для tcc - на -с {0}
   - (частично) #0003223: при передаче в comspec разворачивалось больше, чем нужно.

2. Используем std::atomic<T> вместо Interlocked*().

zg 28.04.2016 13:20:04 +0200 - build 4643

1. в комбобоксе не срабатывал хоткей для текущего элемента.

drkns 28.04.2016 10:40:27 +0200 - build 4642

1. Уточнение 4631.

drkns 26.04.2016 22:50:38 +0200 - build 4641

1. Уточнение 4635: показываем "remaining:" при копировании одного файла и обновляем его с той же частотой, что и скорость.

zg 26.04.2016 16:23:31 +0200 - build 4640

1. в диалоге копирования была возможность выбрать "Also ask on R/O files".

2. уточнение посылки DN_INPUT/DN_CONTROLINPUT для открытого комбобокса.

3. убрано странное поведение по восстановлению старой позиции в списке, если DN_LISTHOTKEY обработан.

zg 26.04.2016 03:41:23 +0200 - build 4639

1. убран неиспользуемый код.

zg 25.04.2016 23:43:02 +0200 - build 4638

1. при открытом комбобоксе не работал граббер.

2. DM_SETCOMBOBOXEVENT возвращало мусор.

drkns 24.04.2016 11:15:15 +0200 - build 4637

1. Уточнение 4633.

drkns 24.04.2016 10:02:26 +0200 - build 4636

1. Уточнение 4635.

drkns 23.04.2016 19:19:54 +0200 - build 4635

1. По просьбам телезрителей: в диалоге копирования отображаем счётчики как "%done% / %total%", а не наоборот.

2. Рефакторинг.

drkns 23.04.2016 02:03:50 +0200 - build 4634

1. С форума: lua:far.Message"aaa". После закрытия диалога заголовок консоли не восстанавливается.

drkns 23.04.2016 01:59:07 +0200 - build 4633

1. Рефакторинг.

shmuel 23.04.2016 00:03:37 +0200 - build 4632
