@@ -1805,7 +1805,7 @@ void Options::InitConfigData()
 		{FSSF_PRIVATE,       NKeySystemExecutor,L"RestoreCP", OPT_DEF(Exec.RestoreCPAfterExecute, true)},
 		{FSSF_PRIVATE,       NKeySystemExecutor,L"UseAppPath", OPT_DEF(Exec.ExecuteUseAppPath, true)},
 		{FSSF_PRIVATE,       NKeySystemExecutor,L"UseHomeDir", OPT_DEF(Exec.UseHomeDir, true)},
-		{FSSF_PRIVATE,       NKeySystemExecutor,L"ComspecFormat", OPT_DEF(Exec.ComspecArguments, L"/S /C \"{0}\"")},
+		{FSSF_PRIVATE,       NKeySystemExecutor,L"ComspecArguments", OPT_DEF(Exec.ComspecArguments, L"/S /C \"{0}\"")},
 
 		{FSSF_PRIVATE,       NKeyViewer,L"AutoDetectCodePage", OPT_DEF(ViOpt.AutoDetectCodePage, true)},
 		{FSSF_PRIVATE,       NKeyViewer,L"DefaultCodePage", OPT_DEF(ViOpt.DefaultCodePage, GetACP())},
